assets/scss/grid.scss
.container {
    margin-left: auto;
    margin-right: auto;

    .right-sidebar {
        width: var(--right-sidebar-width);

        /// Display right sidebar when min-width: lg
        @include respond(lg) {
            display: block;
        }
    }

    &.extended {
        @include respond(md) {
            max-width: 1024px;
            --right-sidebar-width: 30%;
        }

        @include respond(lg) {
            max-width: 1280px;
            --right-sidebar-width: 25%;
        }

        @include respond(mlg) {
            max-width: 1280px;
            --right-sidebar-width: 23%;
        }
        @include respond(xl) {
            max-width: 1680px;
            --right-sidebar-width: 23%;
        }
    }

    &.compact {
        @include respond(md) {
            max-width: 768px;
        }

        @include respond(lg) {
            max-width: 1024px;
        }

        @include respond(xl) {
            max-width: 1280px;
        }
    }
}

.flex {
    display: flex;
    flex-direction: row;

    &.column {
        flex-direction: column;
    }

    &.on-phone--column {
        flex-direction: column;
        @include respond(md) {
            flex-direction: unset;
        }
    }

    &.align-items--flex-start {
        align-items: flex-start;
    }

    .grow {
        flex-grow: 1;
    }

    .do-not-shrink {
        flex-shrink: 0;
    }

    .do-not-overflow {
        min-width: 0;
        flex-shrink: 1;
        max-width: 100%;
    }

    .full-width {
        width: 100%;
    }
}

main.main {
    min-width: 0;
    max-width: 100%;
    flex-grow: 1;
    padding-top: var(--main-top-padding);
}

.main-container {
    min-height: 100vh;
    align-items: flex-start;
    padding: 0 15px;
    column-gap: var(--section-separation);

    @include respond(md) {
        padding: 0 20px;
    }
}

